Showing current temperature based on user's location

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,12 @@ body{
 
 .bgImage{
     position: absolute;
-    top: 0;
+    object-fit: cover;
+    object-position: center;
     left: 0;
-    width: 100%;
+    bottom: 0;
     height: 100%;
+    width: 100%;
     z-index: -1;
     animation: fadeIn 0.5s linear;
 }
