--- a/src/styles.css
+++ b/src/styles.css
@@ -2,21 +2,26 @@
     display: none;
 }
 
-.showing {
-    display: block;
-}
-
-body{
-    color: white;
-    background-color: black;
-}
-
 @keyframes fadeIn{
     from {
         opacity: 0;
     } to{
         opacity: 1;
     }
+}
+
+.showing,
+.clock,
+.weather {
+    display: block;
+    animation: fadeIn 1s linear;
+}
+
+body{
+    color: white;
+    background-color: black;
+    text-align: center;
+    margin: auto;
 }
 
 .bgImage{
@@ -29,4 +34,44 @@ body{
     width: 100%;
     z-index: -1;
     animation: fadeIn 0.5s linear;
+}
+
+.css-todo.showing {
+    display: inline-block;
+    width: 300px;
+}
+
+input[type=text] {
+    width: 300px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+button{
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 0%;
+    background: none;
+    border: none;
+    outline: none;
+    transition: all 0.5s;
+}
+
+button:hover{
+    color: white;
+    background: white;
+    opacity: 0.7;
+}
+
+span {
+    font-size: larger;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.todolist {
+    text-align: left;
+    word-break: break-all;
 }
